# da_exercises

./: .gitignore
da2324_p01_student/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
da2324_p01_student/data_structures/: Graph.h
da2324_p02_student/TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
da2324_p03_student/TP3/: ex1.cpp  ex2.cpp  ex3.cpp
da2324_p03_student/data_structures/: Graph.h
da2324_p04_student/TP4/: ex1.cpp  ex2.cpp  exercises.h
da2324_p04_student/running_examples/closest_point_pair/: ClosestPointPair.h
da2324_p05_student/: CMakeLists.txt
da2324_p05_student/TP5/: ex1.cpp  ex2.cpp  ex3.cpp  exercises.h  testAux.h
da2324_p05_student/data_structures/: Graph.h
da2324_p07_student/: CMakeLists.txt
da2324_p07_student/TP7/: ex1.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  exercises.h
da2324_pLP_student/: CMakeLists.txt
da2324_pLP_student/TPLP/: ex1.cpp  ex3.cpp  ex4.cpp  ex5.cpp  exercises.h  solution2vars.h  solution3vars.h
